@@ -1081,6 +1081,35 @@ INT_PTR CALLBACK SettingsDialogProc(HWND hDlg, UINT message, WPARAM wParam, LPAR
             break;
         }
         
+        case WM_DPICHANGED: {
+            // Get new DPI from wParam
+            int newDpi = HIWORD(wParam);
+            
+            // Get suggested window rect from lParam
+            RECT* suggestedRect = (RECT*)lParam;
+            
+            // Update DPI context
+            DPIContext* context = GetDPIContext(g_dpiManager, hDlg);
+            if (context) {
+                int oldDpi = context->currentDpi;
+                context->currentDpi = newDpi;
+                context->scaleFactor = (double)newDpi / 96.0;
+                
+                // Rescale all UI elements
+                RescaleWindowForDPI(hDlg, oldDpi, newDpi);
+                
+                // Apply suggested window position and size
+                SetWindowPos(hDlg, NULL,
+                            suggestedRect->left,
+                            suggestedRect->top,
+                            suggestedRect->right - suggestedRect->left,
+                            suggestedRect->bottom - suggestedRect->top,
+                            SWP_NOZORDER | SWP_NOACTIVATE);
+            }
+            
+            return 0;
+        }
+        
         case WM_SYSCOLORCHANGE:
             // System colors changed (including high contrast mode changes)
             // Apply high contrast colors if needed
@@ -1315,6 +1344,35 @@ INT_PTR CALLBACK DialogProc(HWND hDlg, UINT message, WPARAM wParam, LPARAM lPara
             
             mmi->ptMinTrackSize.x = minWidth;
             mmi->ptMinTrackSize.y = minHeight;
+            return 0;
+        }
+        
+        case WM_DPICHANGED: {
+            // Get new DPI from wParam
+            int newDpi = HIWORD(wParam);
+            
+            // Get suggested window rect from lParam
+            RECT* suggestedRect = (RECT*)lParam;
+            
+            // Update DPI context
+            DPIContext* context = GetDPIContext(g_dpiManager, hDlg);
+            if (context) {
+                int oldDpi = context->currentDpi;
+                context->currentDpi = newDpi;
+                context->scaleFactor = (double)newDpi / 96.0;
+                
+                // Rescale all UI elements
+                RescaleWindowForDPI(hDlg, oldDpi, newDpi);
+                
+                // Apply suggested window position and size
+                SetWindowPos(hDlg, NULL,
+                            suggestedRect->left,
+                            suggestedRect->top,
+                            suggestedRect->right - suggestedRect->left,
+                            suggestedRect->bottom - suggestedRect->top,
+                            SWP_NOZORDER | SWP_NOACTIVATE);
+            }
+            
             return 0;
         }
         
